# StructRegistration

./: CMakeLists.txt  README.md
data/: euroc.yaml
data/room1/: 0.pcd  0.txt  1.pcd  1.txt  2.pcd  2.txt  3.pcd  3.txt  4.pcd  4.txt  5.pcd  5.txt  6.pcd  6.txt  GMM.txt  PlaneFlag.txt  Planes.txt  target.pcd
examples/: demo.cpp  structreg
include/: GaussComp.h  PlaneFitting.h  Register.h  utils.h
src/: GaussComp.cpp  PlaneFitting.cpp  Register.cpp  utils.cpp
